[package]
name = "cozo_py_module"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cozo_embedded"
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
jemalloc = ["cozo/jemalloc"]
io-uring = ["cozo/io-uring"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module", "abi3", "abi3-py37"] }
cozo = { version = "0.1.2" }
miette = { version = "=5.3.0", features = ["fancy"] }
serde_json = "1.0.81"
